--- a/index.html
+++ b/index.html
@@ -641,9 +641,8 @@
             position: relative;
         }
 
-        /* UPDATED: Bigger Hexagons, Centered Content */
         .why-point {
-            padding: 60px 40px; /* Increased padding */
+            padding: 40px 30px;
             background: var(--white);
             border: 2px solid transparent;
             position: relative;
@@ -655,10 +654,6 @@
             border-radius: 10px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.08);
             will-change: transform;
-            display: flex; /* Centering */
-            flex-direction: column; /* Centering */
-            justify-content: center; /* Centering */
-            min-height: 400px; /* Force minimum height to ensure shape is large enough */
         }
 
         .why-point.animated {
@@ -2147,9 +2142,11 @@
     </style>
 </head>
 <body>
+    <!-- Floating Background Elements -->
     <div class="floating-element"></div>
     <div class="floating-element"></div>
 
+    <!-- Header -->
     <header id="header">
         <div class="container header-container">
             <a href="#" class="logo">Visual Assets Alchemists</a>
@@ -2182,8 +2179,10 @@
         </div>
     </header>
 
+    <!-- VALUE HERO SECTION - Enhanced Luxury Version -->
     <section class="value-hero tight-section" id="value">
         <div class="container value-hero-content">
+            <!-- LUXURY MAIN TITLE - Bigger and more prominent -->
             <div class="luxury-main-title">VISUAL ALCHEMY FOR ARCHITECTURAL SOULS</div>
             
             <div class="value-tagline">Where Light Writes Poetry on Stone</div>
@@ -2232,6 +2231,7 @@
         </div>
     </section>
 
+    <!-- INVESTMENT PHILOSOPHY SECTION - NEW with Sliding Cards -->
     <section class="investment-philosophy tight-section" id="philosophy">
         <div class="container philosophy-container">
             <h2 class="philosophy-title">The Alchemist's Creed</h2>
@@ -2275,6 +2275,7 @@
         </div>
     </section>
 
+    <!-- Why Choose Us Section - Hexagon Layout -->
     <section class="why-choose tight-section" id="why">
         <div class="container">
             <div class="section-intro">
@@ -2340,6 +2341,7 @@
         </div>
     </section>
 
+    <!-- EDITING EXPERTISE SECTION - BIGGER Circle Layout -->
     <section class="editing-expertise tight-section">
         <div class="tools-container">
             <div class="section-intro">
@@ -2383,6 +2385,7 @@
         </div>
     </section>
 
+    <!-- UNIQUE GALLERY LAYOUT - Parallax Effect -->
     <section class="unique-gallery tight-section" id="gallery">
         <div class="container">
             <div class="section-intro">
@@ -2484,6 +2487,7 @@
         </div>
     </section>
 
+    <!-- Stats Banner - Wave Animation -->
     <section class="stats-banner tight-section">
         <div class="container">
             <div class="stats-grid">
@@ -2511,6 +2515,7 @@
         </div>
     </section>
 
+    <!-- Services Section - Folding Card Animation -->
     <section id="services" class="services tight-section">
         <div class="container">
             <div class="section-intro">
@@ -2579,6 +2584,7 @@
         </div>
     </section>
 
+    <!-- Testimonials - 3D Flip Cards -->
     <section class="testimonials tight-section">
         <div class="container">
             <div class="section-intro">
@@ -2602,6 +2608,7 @@
         </div>
     </section>
 
+    <!-- UPDATED PRICING SECTION - Glass Morphism -->
     <section class="pricing-section tight-section" id="pricing">
         <div class="container">
             <div class="section-intro">
@@ -2673,6 +2680,7 @@
         </div>
     </section>
 
+    <!-- Contact Section - Modern Form -->
     <section id="contact" class="contact-section tight-section">
         <div class="container">
             <h2>Begin Your Visual Journey</h2>
@@ -2810,6 +2818,7 @@
                         </button>
                     </form>
                     
+                    <!-- ROI Calculator Form -->
                     <div class="roi-form">
                         <h4 style="margin-bottom: 20px; color: var(--accent);">Alchemy ROI Calculator</h4>
                         <div class="form-group">
@@ -2841,6 +2850,7 @@
         </div>
     </section>
 
+    <!-- Social Media Section - Card Stack -->
     <section class="social-media-section tight-section" id="social">
         <div class="container">
             <div class="section-intro">
@@ -2885,6 +2895,7 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="footer-content">
