--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         .philosophy-card:hover { transform: translateY(-5px); box-shadow: 0 15px 30px rgba(0,0,0,0.08); border-color: var(--accent); }
         .philosophy-icon { font-size: 2.5rem; color: var(--accent); margin-bottom: 20px; }
 
-        /* Why Choose Me */
+        /* Why Choose Me - UPDATED HEXAGONS FIX */
         .why-choose { background: var(--white); padding: 100px 0 60px; }
         .section-intro { text-align: center; max-width: 800px; margin: 0 auto 4rem; }
         .section-intro h2 { margin-bottom: 1.5rem; font-size: clamp(2rem, 4vw, 3rem); color: var(--black); }
