--- a/index.html
+++ b/index.html
@@ -480,15 +480,15 @@
                 </div>
                 <div class="pricing-card featured">
                     <div class="pricing-badge">Most Popular</div>
-                    <h3>PRO Alchemy</h3>
+                    <h3>Cinematic Narrative</h3>
                     <div class="price">€120</div>
-                    <ul class="pricing-features"><li>Photos + Cinematic Video</li><li>Drone Shots</li><li>Social Media Kit</li></ul>
+                    <ul class="pricing-features"><li>Professional Photos</li><li>Cinematic Video</li><li>Social Media Kit</li></ul>
                     <a href="#contact" class="btn btn-accent" style="margin-top:20px;">Select</a>
                 </div>
                 <div class="pricing-card">
                     <h3>Premium Suite</h3>
                     <div class="price">€250</div>
-                    <ul class="pricing-features"><li>Full Transformation</li><li>Virtual Staging</li><li>Branding</li></ul>
+                    <ul class="pricing-features"><li>Full Transformation</li><li>Drone Photos + Video</li><li>3D Floor Plan</li></ul>
                     <a href="#contact" class="btn" style="color: white; border-color: white; margin-top:20px;">Begin</a>
                 </div>
             </div>
@@ -700,4 +700,5 @@
     </script>
 </body>
 </html>
+
 
