Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
             </div>
             <div class="social-links">
                 <div class="social-profile"><div class="social-profile-icon"><i class="fab fa-instagram"></i></div><h3>GZV Photo Lab</h3><div class="social-handle">@gzv.photolab</div><a href="https://instagram.com/gzv.photolab" target="_blank" class="btn" style="margin-top: 15px; padding: 8px 20px; font-size: 0.8rem;">Follow</a></div>
-                <div class="social-profile"><div class="social-profile-icon"><i class="fab fa-instagram"></i></div><h3>NR Arts</h3><div class="social-handle">@NR_Arts_</div><a href="https://instagram.com/NR_Arts_" target="_blank" class="btn" style="margin-top: 15px; padding: 8px 20px; font-size: 0.8rem;">Follow</a></div>
+                <div class="social-profile"><div class="social-profile-icon"><i class="fab fa-instagram"></i></div><h3>NR Arts</h3><div class="social-handle">@n_a.rts</div><a href="https://instagram.com/NR_Arts_" target="_blank" class="btn" style="margin-top: 15px; padding: 8px 20px; font-size: 0.8rem;">Follow</a></div>
                 <div class="social-profile"><div class="social-profile-icon"><i class="fab fa-instagram"></i></div><h3>VAA Studio</h3><div class="social-handle">@VAA_Studio</div><a href="https://instagram.com/VAA_Studio" target="_blank" class="btn" style="margin-top: 15px; padding: 8px 20px; font-size: 0.8rem;">Follow</a></div>
             </div>
         </div>
@@ -700,5 +700,6 @@
     </script>
 </body>
 </html>
+
 
 
