--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <a href="#" class="logo">Visual Assets Alchemists</a>
             <div class="header-social">
                 <a href="https://instagram.com/gzv.photolab" target="_blank" class="social-link" title="GZV Photo Lab"><i class="fab fa-instagram"></i></a>
-                <a href="https://instagram.com/NR_Arts_" target="_blank" class="social-link" title="NR Arts"><i class="fab fa-instagram"></i></a>
+                <a href="https://instagram.com/n.a_rts" target="_blank" class="social-link" title="N.A_Rts"><i class="fab fa-instagram"></i></a>
                 <a href="https://instagram.com/VAA_Studio" target="_blank" class="social-link" title="VAA Studio"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="mobile-toggle" id="mobileToggle"><i class="fas fa-bars"></i></div>
@@ -700,6 +700,7 @@
     </script>
 </body>
 </html>
+
 
 
 
