Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -474,14 +474,14 @@
             <div id="real-estate" class="pricing-content active">
                 <div class="pricing-card">
                     <h3>Visual Foundation</h3>
-                    <div class="price">€70</div>
+                    <div class="price">€85</div>
                     <ul class="pricing-features"><li>Professional Photos</li><li>Editing</li><li>48h Delivery</li></ul>
                     <a href="#contact" class="btn" style="color: white; border-color: white; margin-top:20px;">Begin</a>
                 </div>
                 <div class="pricing-card featured">
                     <div class="pricing-badge">Most Popular</div>
                     <h3>Cinematic Narrative</h3>
-                    <div class="price">€120</div>
+                    <div class="price">€150</div>
                     <ul class="pricing-features"><li>Professional Photos</li><li>Cinematic Video</li><li>Social Media Kit</li></ul>
                     <a href="#contact" class="btn btn-accent" style="margin-top:20px;">Select</a>
                 </div>
@@ -548,7 +548,7 @@
                 <div class="contact-info">
                     <h3>Ready to Transmute?</h3>
                     <p>Let's discuss how visual alchemy can elevate your listings.</p>
-                    <div class="contact-detail"><strong>Email:</strong> home@visualchemy.gr</div>
+                    <div class="contact-detail"><strong>Email:</strong> home@visualchemy.me</div>
                 </div>
                 <div class="form-container">
                     <form>
@@ -576,7 +576,7 @@
             </div>
             <div class="social-links">
                 <div class="social-profile"><div class="social-profile-icon"><i class="fab fa-instagram"></i></div><h3>GZV Photo Lab</h3><div class="social-handle">@gzv.photolab</div><a href="https://instagram.com/gzv.photolab" target="_blank" class="btn" style="margin-top: 15px; padding: 8px 20px; font-size: 0.8rem;">Follow</a></div>
-                <div class="social-profile"><div class="social-profile-icon"><i class="fab fa-instagram"></i></div><h3>NR Arts</h3><div class="social-handle">@n_a.rts</div><a href="https://instagram.com/NR_Arts_" target="_blank" class="btn" style="margin-top: 15px; padding: 8px 20px; font-size: 0.8rem;">Follow</a></div>
+                <div class="social-profile"><div class="social-profile-icon"><i class="fab fa-instagram"></i></div><h3>N_A.Rts</h3><div class="social-handle">@n_a.rts</div><a href="https://instagram.com/n_a.rts" target="_blank" class="btn" style="margin-top: 15px; padding: 8px 20px; font-size: 0.8rem;">Follow</a></div>
                 <div class="social-profile"><div class="social-profile-icon"><i class="fab fa-instagram"></i></div><h3>VAA Studio</h3><div class="social-handle">@VAA_Studio</div><a href="https://instagram.com/VAA_Studio" target="_blank" class="btn" style="margin-top: 15px; padding: 8px 20px; font-size: 0.8rem;">Follow</a></div>
             </div>
         </div>
@@ -700,6 +700,7 @@
     </script>
 </body>
 </html>
+
 
 
 
