--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <a href="#" class="logo">Visual Assets Alchemists</a>
             <div class="header-social">
                 <a href="https://instagram.com/gzv.photolab" target="_blank" class="social-link" title="GZV Photo Lab"><i class="fab fa-instagram"></i></a>
-                <a href="https://instagram.com/n.a_rts" target="_blank" class="social-link" title="N.A_Rts"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/n_a.rts" target="_blank" class="social-link" title="N_A.Rts"><i class="fab fa-instagram"></i></a>
                 <a href="https://instagram.com/VAA_Studio" target="_blank" class="social-link" title="VAA Studio"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="mobile-toggle" id="mobileToggle"><i class="fas fa-bars"></i></div>
@@ -548,7 +548,7 @@
                 <div class="contact-info">
                     <h3>Ready to Transmute?</h3>
                     <p>Let's discuss how visual alchemy can elevate your listings.</p>
-                    <div class="contact-detail"><strong>Email:</strong> home@visualchemy.me</div>
+                    <div class="contact-detail"><strong>Email:</strong> contact@visualchemy.me</div>
                 </div>
                 <div class="form-container">
                     <form>
@@ -700,6 +700,7 @@
     </script>
 </body>
 </html>
+
 
 
 
